--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "dependencies": {
+  "scripts": {
+    "start": "node index.js"
+},
+"dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "socket.io": "^4.7.5"
-  }
 }
+}
+
